force-app/main/default/objects/HDT_PEV_activityReceived__e/HDT_PEV_activityReceived__e.object-meta.xml
<CustomObject>
    <label>Activity Ricevuta</label>
    <pluralLabel>Activities Ricevute</pluralLabel>
</CustomObject>