force-app/main/default/objects/HDT_PEV_activityReceived__e/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>