force-app/main/default/objects/HDT_PEV_activityReceived__e/fields/Id__c.field-meta.xml
<CustomField>
    <fullName>Id__c</fullName>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>