force-app/main/default/objects/HDT_PEV_activityReceived__e/fields/QAdLogin__c.field-meta.xml
<CustomField>
    <fullName>QAdLogin__c</fullName>
    <label>Login SIGMA</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>